# Epidemics

./: .gitignore  CMakeLists.txt  Doxyfile  EpidemicsRunnerOutputsri_output.txt  Outputoutput0.txt  Outputoutput1.txt  Outputoutput10.txt  Outputoutput100.txt  Outputoutput101.txt  Outputoutput102.txt  Outputoutput103.txt  Outputoutput104.txt  Outputoutput105.txt  Outputoutput106.txt  Outputoutput107.txt  Outputoutput108.txt  Outputoutput109.txt  Outputoutput11.txt  Outputoutput110.txt  Outputoutput111.txt  Outputoutput112.txt  Outputoutput113.txt  Outputoutput114.txt  Outputoutput115.txt  Outputoutput116.txt  Outputoutput117.txt  Outputoutput118.txt  Outputoutput119.txt  Outputoutput12.txt  Outputoutput120.txt  Outputoutput121.txt  Outputoutput122.txt  Outputoutput123.txt  Outputoutput124.txt  Outputoutput125.txt  Outputoutput126.txt  Outputoutput127.txt  Outputoutput128.txt  Outputoutput129.txt  Outputoutput13.txt  (+389 more)
EpidemicsRunner/Linux/: .utility.h.swp  comp.sh  main.cpp  utility.h
EpidemicsRunner/Windows/: AssemblyInfo.cpp  Form8.resx  pch.h
Samples/: main.cpp  main_seird.cpp  main_seird_pde.cpp  main_seird_variable_alpha.cpp  main_testparser.cpp  test
Samples/GUI/: evaluate.lua
documents/Drafts/: PDE Model Finite Difference Derivation for a plane.docx  (+1 more)
interactive/ModelRunner/: a.out  (+2 more)
models/: .epidemics.h.swp  .seird_pde.h.swp  .test.cpp.swp  .utility.h.swp  .writer.h.swp  a.out  epidemics.h  main.cpp  main_seird.cpp  main_seird_pde.cpp  main_testparser.cpp  seird.h  seird_pde.h  seird_variable_alpha.h  sir.h  test.cpp  test.txt  utility.h  writer.h  ziel.txt
(+291 files in other folders)
